--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/*/node_modules
 
 # testing
 /coverage
@@ -17,6 +17,8 @@ server/node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+
+/*/.git
 
 npm-debug.log*
 yarn-debug.log*
