--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/*/node_modules
+*/node_modules
+/node_modules
 
 # testing
 /coverage
@@ -9,8 +10,6 @@
 # production
 /build
 
-#server
-server/node_modules/
 # misc
 .DS_Store
 .env.local
