--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3"
+  },
+  "scripts": {
+    "start": "cd app && yarn build && cd .. && node index"
   }
 }
