--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mobx": "^3.1.15",
     "mobx-react": "^4.2.1",
